src/objects/Partner_Commission_Payment__c.object
<CustomObject>
    <description>For BAP-3698 - Partner Commissions v2

Records the payments made out to our referral partners for their commissions</description>
    <fields>
        <fullName>Custom_Note__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Notes for the transaction</inlineHelpText>
        <label>Custom Note</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Description of the payment</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee__c</fullName>
        <description>For BAP-3698 - Partner Commission v2</description>
        <inlineHelpText>Fees associated with the transaction</inlineHelpText>
        <label>Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Message__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Message attached to the transaction</inlineHelpText>
        <label>Message</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Partner_Account__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The partner (RV Account) that this payment was issued to</inlineHelpText>
        <label>Partner Account</label>
        <referenceTo>rvpe__RVAccount__c</referenceTo>
        <relationshipLabel>Partner Commission Payments</relationshipLabel>
        <relationshipName>Partner_Commission_Payments</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Payment_Amount__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The amount paid to the partner</inlineHelpText>
        <label>Amount</label>
        <precision>18</precision>
        <required>true</required>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Payment_Date__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Date that the payment was issued to the partner</inlineHelpText>
        <label>Payment Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Payment_Method__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The method of payment to the partner</inlineHelpText>
        <label>Payment Method</label>
        <picklist>
            <picklistValues>
                <fullName>PayPal</fullName>
                <default>true</default>
            </picklistValues>
            <picklistValues>
                <fullName>ACH</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Check</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Reason_Code__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>Reason code returned from the bank</inlineHelpText>
        <label>Reason Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Recipient__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <inlineHelpText>The email of the recipient at the time of the payment.  May not necessarily match the RV Account&apos;s paypal Id if it has changed over time.</inlineHelpText>
        <label>Recipient</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <description>For BAP-3698 - Partner Commission v2</description>
        <inlineHelpText>The status of the payment - only &quot;Completed&quot; means that the monies were received</inlineHelpText>
        <label>Status</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Transaction_ID__c</fullName>
        <description>For BAP-3698 - Partner Commissions v2</description>
        <externalId>true</externalId>
        <inlineHelpText>The external transaction ID for the payment</inlineHelpText>
        <label>Transaction ID</label>
        <length>255</length>
        <type>Text</type>
        <unique>true</unique>
    </fields>
    <label>Partner Commission Payment</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>PCP-{00000}</displayFormat>
        <label>Partner Commission Payment Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Partner Commission Payments</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>